--- a/index.html
+++ b/index.html
@@ -52,27 +52,9 @@
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link scrollto" href="#services">Services</a></li>
-          <li><a class="nav-link   scrollto" href="#portfolio">Portfolio</a></li>
           <li><a class="nav-link scrollto" href="#team">Team</a></li>
-          <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Drop Down 2</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
-            </ul>
-          </li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-          <li><a class="getstarted scrollto" href="#about">Get Started</a></li>
+          <li><a class="getstarted scrollto" href="waitlist.html">Get Started</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -89,8 +71,12 @@
           <h1>Got a bad strategy?</h1>
           <h2>Find out, we use the strategy foundary technique to help businesses for good strategy as per the best selling author Richard Rumelt</h2>
           <div class="d-flex justify-content-center justify-content-lg-start">
-            <a href="#about" class="btn-get-started scrollto">Discover How</a>
-            <a href="https://app.formbricks.com/s/clux0uxnz13br1bspxorwjkwe" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Learn More</span></a>
+            <!-- Trigger button for the contact modal -->
+          <!-- <button type="button" class="btn-get-started btn btn-primary" data-bs-toggle="modal" data-bs-target="#contactModal">
+            Discover How
+          </button> -->
+            <a href="waitlist.html" class="btn-get-started scrollto">Discover How</a>
+            <!-- <a href="https://app.formbricks.com/s/clux0uxnz13br1bspxorwjkwe" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Learn More</span></a> -->
           </div>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200">
@@ -100,6 +86,36 @@
     </div>
 
   </section><!-- End Hero -->
+
+  <!-- Modal -->
+  <div class="modal fade" id="contactModal" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="modalLabel">Let's Talk - how can we help?</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <form action="https://formspree.io/f/mdoqpjow" method="POST" role="form" class="php-email-form">
+            <div class="form-group mt-3">
+              <input type="text" class="form-control" name="name" id="name" placeholder="Your Name" required>
+            </div>
+            <div class="form-group mt-3">
+              <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
+            </div>
+            <div class="form-group mt-3">
+              <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
+            </div>
+            <div class="form-group mt-3">
+              <div class="text-center">
+                <button type="submit" class="btn-get-started scrollto btn btn-primary">Send Message</button>
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <main id="main">
 
@@ -354,7 +370,7 @@
             <p>Connect with our CEO directly to discuss how we can help transform your business with tailored strategic insights. Schedule a confidential consultation at your convenience.</p>
           </div>
           <div class="col-lg-3 cta-btn-container text-center">
-            <a class="cta-btn align-middle" href="#">Book now</a>
+            <a class="cta-btn align-middle" href="#contact">Book now</a>
           </div>
         </div>
 
@@ -362,7 +378,7 @@
     </section><!-- End Cta Section -->
 
     <!-- ======= Portfolio Section ======= -->
-    <section id="portfolio" class="portfolio">
+    <!-- <section id="portfolio" class="portfolio">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
@@ -472,7 +488,7 @@
         </div>
 
       </div>
-    </section><!-- End Portfolio Section -->
+    </section>End Portfolio Section -->
 
     <!-- ======= Team Section ======= -->
     <section id="team" class="team section-bg">
@@ -480,7 +496,7 @@
 
         <div class="section-title">
           <h2>Team</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Meet our fantastic team! All experts in their field and here to help you succeed.</p>
         </div>
 
         <div class="row">
@@ -763,7 +779,7 @@
           </div>
 
           <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+            <form action="https://formspree.io/f/mdoqpjow" method="POST" role="form" class="php-email-form">
               <div class="row">
                 <div class="form-group col-md-6">
                   <label for="name">Your Name</label>
@@ -794,6 +810,53 @@
         </div>
 
       </div>
+
+      <script>
+        document.addEventListener('DOMContentLoaded', function () {
+          var form = document.getElementById('contact-form');
+          form.addEventListener('submit', function (e) {
+            e.preventDefault();
+            var formData = new FormData(form);
+            var object = {};
+            formData.forEach(function(value, key){
+                object[key] = value;
+            });
+            var json = JSON.stringify(object);
+      
+            fetch(form.action, {
+              method: 'POST',
+              headers: {
+                'Accept': 'application/json',
+                'Content-Type': 'application/json'
+              },
+              body: json
+            }).then(response => {
+              if (response.ok) {
+                form.reset(); // Reset the form to clear the fields
+                document.querySelector('.sent-message').style.display = 'block';
+                document.querySelector('.error-message').style.display = 'none';
+              } else {
+                response.json().then(data => {
+                  document.querySelector('.error-message').textContent = data.error;
+                });
+                document.querySelector('.sent-message').style.display = 'none';
+                document.querySelector('.error-message').style.display = 'block';
+              }
+              document.querySelector('.loading').style.display = 'none';
+            }).catch(error => {
+              document.querySelector('.error-message').textContent = 'Could not send email. Try again later!';
+              document.querySelector('.sent-message').style.display = 'none';
+              document.querySelector('.error-message').style.display = 'block';
+              document.querySelector('.loading').style.display = 'none';
+            });
+      
+            document.querySelector('.loading').style.display = 'block';
+            document.querySelector('.sent-message').style.display = 'none';
+            document.querySelector('.error-message').style.display = 'none';
+          });
+        });
+      </script>
+
     </section><!-- End Contact Section -->
 
   </main><!-- End #main -->
