small change to the waitlist

--- a/waitlist.html
+++ b/waitlist.html
@@ -19,7 +19,8 @@
 
         <div class="section-title">
             <h2>Claim Your Spot</h2>
-            <p>Our team is at full capacity, delivering unparalleled strategies and results. While we’re reshaping industries, you have a unique chance to secure a future collaboration. Join our waitlist—don’t miss out on teaming up with the best!</p>
+            <p>Our team is at full capacity, delivering unparalleled strategies and results. <br><br> 
+                While we’re reshaping industries, you have a unique chance to secure a future collaboration. Join our waitlist—don’t miss out on teaming up with the best!</p>
         </div>
 
         <div class="row mt-1">
