--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <div class="row">
         <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
           <h1>Got a bad strategy?</h1>
-          <h2>Find out, we use the strategy foundary technique to help businesses for good strategy as per the best selling author Richard Rumelt</h2>
+          <h2>Let's find out, we use the strategy foundary technique to help businesses form good strategies utilising the best selling author Richard Rumelt's technique</h2>
           <div class="d-flex justify-content-center justify-content-lg-start">
             <!-- Trigger button for the contact modal -->
           <!-- <button type="button" class="btn-get-started btn btn-primary" data-bs-toggle="modal" data-bs-target="#contactModal">
