--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center">
 
-      <h1 class="logo me-auto"><a href="index.html">Strategy</a></h1>
+      <h1 class="logo me-auto"><a href="index.html">Smythe26</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -68,8 +68,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
-          <h1>Got a bad strategy?</h1>
-          <h2>Find out, we use the strategy foundary technique to help businesses for good strategy as per the best selling author Richard Rumelt</h2>
+          <h1>Think you've got a bad strategy?</h1>
+          <h2>Then find out, we use the strategy foundary technique popularised by best selling author Richard Rumelt to help businesses form good strategies</h2>
           <div class="d-flex justify-content-center justify-content-lg-start">
             <!-- Trigger button for the contact modal -->
           <!-- <button type="button" class="btn-get-started btn btn-primary" data-bs-toggle="modal" data-bs-target="#contactModal">
@@ -80,7 +80,7 @@
           </div>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200">
-          <img src="assets/img/hero-img.png" class="img-fluid animated" alt="">
+          <img src="assets/img/herobandw.png" class="img-fluid animated" alt="">
         </div>
       </div>
     </div>
@@ -163,11 +163,11 @@
         <div class="row content">
           <div class="col-lg-6">
             <p>
-              At Strategy Foundary, we specialize in diagnosing and resolving the pivotal challenges your business faces. Our methods are rooted in the acclaimed 'Good Strategy Bad Strategy' approach, focusing on practical, actionable insights.
+              At SM26, we specialise in diagnosing and resolving the pivotal challenges your business faces. Our methods are rooted in the acclaimed 'Good Strategy Bad Strategy' approach, focusing on practical, actionable insights.
             </p>
             <ul>
               <li><i class="ri-check-double-line"></i> One-on-one executive sessions</li>
-              <li><i class="ri-check-double-line"></i> Customized strategy workshops</li>
+              <li><i class="ri-check-double-line"></i> Customised strategy workshops</li>
               <li><i class="ri-check-double-line"></i> Comprehensive action plans</li>
             </ul>
           </div>
@@ -217,7 +217,7 @@
           <div class="col-lg-7 d-flex flex-column justify-content-center align-items-stretch  order-2 order-lg-1">
 
             <div class="content">
-              <h3>We are the best at <strong>action oreintated strategy</strong> consultants in the UK</h3>
+              <h3>We are the best <strong>action oreintated strategy</strong> consultants in the UK</h3>
               <p>
                 Unlike traditional consultancies, our approach is grounded exclusively in the proven principles of 'Good Strategy Bad Strategy.' We don't just offer advice—we ensure your team is equipped to act with precision and insight.
               </p>
@@ -321,14 +321,14 @@
       <div class="container" data-aos="fade-up">
         <div class="section-title">
           <h2>Services</h2>
-          <p>Explore our specialized services designed to elevate your strategic planning and execution.</p>
+          <p>Explore our specialised services designed to elevate your strategic planning and execution.</p>
         </div>
         <div class="row">
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box">
               <div class="icon"><i class="bx bxl-dribbble"></i></div>
               <h4><a href="">Strategic Diagnostics</a></h4>
-              <p>Identify the core issues that are holding back your business growth and strategize effectively to address them.</p>
+              <p>Identify the core issues that are holding back your business growth and strategise effectively to address them.</p>
             </div>
           </div>
 
@@ -667,7 +667,7 @@
               </a>
               <div id="faq-list-3" class="collapse" data-bs-parent=".faq-list">
                 <p>
-                  Each of our sessions is highly customized based on extensive pre-engagement research and analysis. We adapt our methodology to the specific dynamics and challenges of your industry, ensuring relevance and impact, no matter your company’s size or sector.
+                  Each of our sessions is highly customised based on extensive pre-engagement research and analysis. We adapt our methodology to the specific dynamics and challenges of your industry, ensuring relevance and impact, no matter your company’s size or sector.
                 </p>
               </div>
             </li>
@@ -713,7 +713,7 @@
             <li data-aos="fade-up" data-aos-delay="700">
               <i class="bx bx-help-circle icon-help"></i> 
               <a data-bs-toggle="collapse" class="collapse btn-info" data-bs-target="#faq-list-7">
-                What industries does Strategy Foundary specialize in?
+                What industries does Strategy Foundary specialise in?
                 <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i>
               </a>
               <div id="faq-list-7" class="collapse" data-bs-parent=".faq-list">
