Tweaked the content on the home page

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Strategy Foundary Consulting - Lead Your Market</title>
-  <meta content="Revolutionize your business strategy with our unique Strategy Foundary approach, directly derived from the 'Good Strategy Bad Strategy' principles. Engage with us to transform your strategic thinking and execution." name="description">
+  <meta content="Revolutionise your business strategy with our unique Strategy Foundary approach, directly derived from the 'Good Strategy Bad Strategy' principles. Engage with us to transform your strategic thinking and execution." name="description">
   <meta content="Strategy Consultancy, Business Strategy, Strategy Foundary, Good Strategy Bad Strategy, Executive Strategy" name="keywords">
 
   <!-- Favicons -->
@@ -183,7 +183,7 @@
         <div class="row content">
           <div class="col-lg-6">
             <p>
-              At SM26, we specialise in diagnosing and resolving the pivotal challenges your business faces. Our methods are rooted in the acclaimed 'Good Strategy Bad Strategy' approach, focusing on practical, actionable insights.
+              At Smythe26, we specialise in diagnosing and resolving the pivotal challenges your business faces. Our methods are rooted in the acclaimed 'Good Strategy Bad Strategy' approach, focusing on practical, actionable insights.
             </p>
             <ul>
               <li><i class="ri-check-double-line"></i> One-on-one executive sessions</li>
